# pocketcv-pdf

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: android.yml  ci.yml  pages.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pocketcv/pdf/: CornerOverlayView.java  MainActivity.java  OnDeviceScanner.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: file_paths.xml
docs/: research-notes.md  resume.md
scripts/: android_emulator_qa.ps1  build_windows_local_app.ps1  generate_sample.py  install_android_debug.ps1  run_demo_pipeline.py
src/clearscan_cv/: __init__.py  api.py  cli.py  corners.py  dewarp.py  docnet.py  evaluation.py  export.py  geometry.py  image_io.py  local_app.py  model_hooks.py  ocr.py  pipeline.py  quality.py  synthetic_data.py  training_data.py
src/clearscan_cv/static/: index.html  local.html  manifest.webmanifest  sw.js
tests/: test_android_packaging.py  test_api.py  test_demo_pipeline.py  test_docnet.py  test_evaluation.py  test_export.py  test_ocr.py  test_pipeline.py  test_synthetic_data.py  test_training_data.py
