[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearscan-cv"
version = "0.1.0"
description = "On-device image processing reports and document enhancement experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
clearscan = "clearscan_cv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clearscan_cv = ["static/*.html", "static/*.webmanifest", "static/*.js"]
