[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearscan-cv"
version = "0.1.0"
description = "On-device image processing reports and document enhancement experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]
ocr = [
  "pytesseract>=0.3.10"
]
rapidocr = [
  "rapidocr-onnxruntime>=1.3.24"
]
paddleocr = [
  "paddleocr>=2.8"
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0"
]
desktop = [
  "pyinstaller>=6.8"
]

[project.scripts]
clearscan = "clearscan_cv.cli:main"
clearscan-dataset = "clearscan_cv.training_data:main"
pocketcv-local = "clearscan_cv.local_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clearscan_cv = ["static/*.html", "static/*.webmanifest", "static/*.js"]
